refactor(YB-440): 사용자, 주문, 재고 도메인 Unit Test를 DCI 패턴으로 refactoring